--- a/assets/backend/css/custom.css
+++ b/assets/backend/css/custom.css
@@ -380,7 +380,7 @@ label{
 
 .alignToTitle {
   float: right;
-  margin-top: -44px;
+  margin-bottom: 20px;
 }
 .gallery-env article.album {
   background: #fff;
